C++11: properly support "auto* v = ..." syntax.

BUG: 336197